# custodian

./: .gitignore  README .md  README.md  cabal.docspec  cabal.project  cabal.project.freeze  custodian-implementation-spec .md  custodian-implementation-spec.md  custodian-verified.cabal  custodian-vision.md  custodian.cabal  fourmolu.yaml  hlint.yaml  verify.sh  weeder.toml
.github/workflows/: ci.yml
app/: Main.hs
live/: custodian-live.cabal
live-tests/: LiveSpec.hs
live-tests/fixtures/: hello.bpf.c
live/examples/: SyscallCounter.hs
live/live-tests/: LiveSpec.hs
live/live-tests/fixtures/: README.md  hello.bpf.c
live/src/Custodian/: Live.hs  Raw.hs
live/src/Custodian/Raw/: MapInfo.hsc
negative-tests/: Negative.hs  run.sh
negative-tests/cases/: Case1_DoubleTeardown.hs  Case2_ScopeEscape.hs  Case3_LiveMapEscape.hs  Case4_BadArrayKey.hs  Case5_ArrayDelete.hs  Control_ShouldCompile.hs
scripts/: check-negative-tests.sh
src/: Custodian.hs
src/Custodian/: Core.hs  Errors.hs  Live.hs  Map.hs  Mock.hs  Raw.hs
test/: Spec.hs
test-emergency/: EmergencySpec.hs
