cabal-version:      3.0
name:               custodian
version:            0.1.0.0
synopsis:           A Haskell binding for libbpf, built to be read like a proof
license:            BSD-3-Clause
build-type:         Simple
tested-with:        GHC ==9.14.1

common warnings
  ghc-options: -Wall -Werror

flag negative-tests-enabled
  description: Enable building negative-tests. Only ever turned on by
               scripts/check-negative-tests.sh, which expects the build
               to FAIL -- it must stay off for normal `cabal build`/`cabal test`.
  default:     False
  manual:      True

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:  Custodian
                  , Custodian.Errors
                  , Custodian.Mock
                  , Custodian.Raw
                  , Custodian.Live
  pkgconfig-depends: libbpf
  build-depends:    base >=4.19 && <5
                  , relude
                  , linear-base
  default-language: GHC2021
  default-extensions: NoImplicitPrelude
                    , LinearTypes
                    , DataKinds
                    , KindSignatures
                    , GADTs
                    , MultiParamTypeClasses
                    , FlexibleInstances

executable custodian-example
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base
                  , custodian
                  , linear-base
  default-language: GHC2021

test-suite custodian-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base
                  , custodian
                  , linear-base
                  , hedgehog
                  , tasty
                  , tasty-hedgehog
  default-language: GHC2021

test-suite negative-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   negative-tests
  main-is:          Negative.hs
  if flag(negative-tests-enabled)
    buildable:      True
  else
    buildable:      False
  build-depends:    base
                  , custodian
                  , linear-base
  default-language: GHC2021
  default-extensions: NoImplicitPrelude
                    , LinearTypes
                    , DataKinds
                    , KindSignatures
                    , GADTs
                    , QualifiedDo
                    , MultiParamTypeClasses
                    , FlexibleInstances

test-suite live-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   live-tests
  main-is:          LiveSpec.hs
  -- Always buildable: compiling this test needs nothing privilege does
  -- not have (no clang invocation happens until main runs). Whether it
  -- does anything beyond print a skip notice is decided at *runtime* by
  -- checking the effective UID, not by a build-time flag -- see
  -- LiveSpec.hs. This is deliberately unlike negative-tests, which is
  -- flag-gated because it must NOT build under normal circumstances.
  build-depends:    base
                  , custodian
                  , linear-base
                  , process
                  , unix
  default-language: GHC2021
